--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="w-full fixed bottom-4 flex justify-center">
                 <div
                     @click="reset"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-4xl px-10 py-5 text-center"
+                    class="cursor-pointer text-white bg-blue-700 hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 font-medium rounded-full text-4xl px-10 py-5 text-center"
                 >
                     Reset
                 </div>
